@@ -12,7 +12,7 @@
 <?lsmb entity_type = 'Unsupported' -?>
 <?lsmb END -?>
 <?lsmb title = text("$entity_type Search") # " -?>
-<form method="post" action="<?lsmb script ?>">
+<form method="get" action="<?lsmb script ?>">
 <?lsmb INCLUDE input element_data = {
 	type = "hidden"
 	name = "account_class"
